# GENOME

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MainContent.jsx
src/components/Analysis/: AlignmentTool.jsx
src/components/FileUpload/: FileDropzone.jsx
src/components/Layout/: BottomPanel.jsx  Explorer.jsx  PropertiesPanel.jsx  Sidebar.jsx  TabBar.jsx  TitleBar.jsx
src/components/Pages/: AlignmentPage.jsx  ChartsPage.jsx  GenomeBrowserPage.jsx  ImportPage.jsx  MutationsPage.jsx  PerformancePage.jsx  SettingsPage.jsx
src/components/Panels/: ExtensionsPanel.jsx  FileBrowserPanel.jsx
src/components/Sequences/: SequenceViewer.jsx
src/components/Welcome/: WelcomeScreen.jsx
src/locales/: de.js  en.js  es.js  fr.js  index.js  ru.js
src/modules/analysis/: MutationAnalysis.js  SequenceAlignment.js
src/modules/parser/: FastaParser.js  FastqParser.js  VCFParser.js
src/store/: index.js
src/types/: index.js
