[package]
name = "genome"
version = "0.0.1"
description = "GENOME"
authors = ["AlexTrish"]
license = ""
repository = ""
default-run = "genome"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
